--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "content-type": "^1.0.4",
     "cookie": "^0.4.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.3",
+    "limit": "0.0.1",
+    "mysql": "^2.17.1",
+    "raw-body": "^2.4.1",
     "sqlite3": "^4.1.0"
   }
 }
