--- a/package.json
+++ b/package.json
@@ -14,15 +14,22 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "browser-cookies": "^1.2.0",
     "content-type": "^1.0.4",
     "cookie": "^0.4.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "free-mobile-sms-api": "^1.0.4",
+    "google-id-token-verifier": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.3",
     "limit": "0.0.1",
     "mysql": "^2.17.1",
+    "node-sms-send": "^0.1.3",
+    "nodemailer": "^6.3.0",
     "raw-body": "^2.4.1",
     "sqlite3": "^4.1.0"
   }
